<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


        <FrameLayout
            android:id="@+id/list_movie_moviePlayer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop">

            <ImageView
                android:id="@+id/list_movie_movieThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/youtubevideo" />

        </FrameLayout>

    <TextView
        android:id="@+id/list_movie_movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/list_movie_moviePlayer"
        android:layout_marginTop="14dp"
        android:text="@string/mowgli_2018_film_official_trailer"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_movie_movieTitle"
        android:text="Release Date : "
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_movie_countDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_movie_release_date"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="CountDown"/>

    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_movie_release_date"
        android:layout_alignTop="@+id/text_movie_release_date"
        android:layout_below="@+id/list_movie_movieTitle"
        android:layout_toEndOf="@+id/text_movie_release_date"
        android:layout_toRightOf="@+id/text_movie_release_date"
        android:text="7/10/2018"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_movie_countDown"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_ratting_hea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/rate_this_movie"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonRatting1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="Hit"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonRatting2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="Average"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonRatting3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="Flop"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonRatting4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="Waste ! but will Get Box Office collections"
            android:textSize="12sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="13dp"
        android:text="Yes ! I want to participate in the Lottery ! to Win Ticket"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxLottery1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:text="Send me the Poll Results" />

    <CheckBox
        android:id="@+id/checkBoxLottery2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBoxLottery1"
        android:text="Yes want to Win ! Lottery ticket to 1stDay1show of this movie" />

    <CheckBox
        android:id="@+id/checkBoxLottery3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBoxLottery2"
        android:text="Yes! Want to Meet Crew" />

    <CheckBox
        android:id="@+id/checkBoxLottery4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBoxLottery3"
        android:text="Yes! want to meet the actors" />

    <CheckBox
        android:id="@+id/checkBoxLottery5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBoxLottery4"
        android:text="@string/yes_i_am_film_critic_i_want_to_win_the_last_golden_ticket" />


    <Button
        android:id="@+id/list_movie_addFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buy_lottery_tickets"
        android:background="@drawable/favourite_request_background"
        android:layout_below="@+id/checkBoxLottery5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/list_movie_addFavourite"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray" />


</RelativeLayout>